<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_update_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thinkdifferent.noteapp.view.activity.AddUpdateNoteActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_note_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_note_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_type" />

    <Spinner
        android:id="@+id/spn_note_types"
        android:layout_width="match_parent"
        android:layout_height="45dp" />


    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/note_background_color" />

    <TableRow>

        <View
            android:id="@+id/view_color"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="#00688B" />

        <Button
            android:id="@+id/btn_change_color"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/change_color"
            android:textColor="@android:color/white" />
    </TableRow>


    <Button
        android:id="@+id/btn_save_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@android:color/white" />
</TableLayout>
